@@ -1,3 +1,8 @@
+2017-02-10 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/packages/formbroker/formbroker.tcl: now
+    handling natively also boolean in the form y|n or
+    0|1
+
 2017-02-01 Massimo Manghi <mxmanghi@apache.org>
     * configure.ac: defining and substituting
     RIVETLIB_VERSION
